# hello-uv

./: README.md  pyproject.toml
